Fix for bug that cause page width to exceed viewport on mobile

--- a/scss/_block-grid.scss
+++ b/scss/_block-grid.scss
@@ -19,7 +19,7 @@ $block-grid-media-queries: true !default;
 
   @if $base-style {
     display: block;
-    padding: 0 1em 0 1em;
+    padding: 0 0.5em;
     margin: 0 (-$spacing);
     @include clearfix;
 
